--- a/Code/SFU Circular/app/src/main/res/layout/activity_home_page.xml
+++ b/Code/SFU Circular/app/src/main/res/layout/activity_home_page.xml
@@ -11,11 +11,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="348dp"
         android:layout_marginEnd="64dp"
         android:onClick="onClick"
         android:text="Logout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/displayInfoTxt" />
 
@@ -31,4 +32,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.404" />
+
+    <Button
+        android:id="@+id/Request"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="50dp"
+        android:text="@string/Request_Item"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
