--- a/Code/SFU Circular/app/src/main/res/layout/activity_listing_page.xml
+++ b/Code/SFU Circular/app/src/main/res/layout/activity_listing_page.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RequestPage"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ListingPage">
+
     <Button
-        android:id="@+id/addBtn"
-        android:layout_width="100dp"
+        android:id="@+id/goToPostListing"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="Post Item"/>
+        android:text="ADD LISTING" />
 
     <ListView
-        android:id="@+id/requestListView"
+        android:id="@+id/listingListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="50dp" />
 </LinearLayout>
