redesigned, made fragments

--- a/Code/SFU Circular/app/src/main/res/layout/request_list_item.xml
+++ b/Code/SFU Circular/app/src/main/res/layout/request_list_item.xml
@@ -1,33 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    android:textAlignment="center">
+
+    <ImageView
+        android:id="@+id/tv_image"
+        android:layout_width="match_parent"
+        android:layout_height="183dp"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/tv_desc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="PlaceHolder: Desc"
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginRight="10dp"
-        android:textSize="16sp"
-        />
-    <TextView
-        android:id="@+id/tv_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginRight="10dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="PlaceHolder: Name"
+        android:textAlignment="center"
+        android:textSize="16sp" />
+
     <TextView
         android:id="@+id/tv_contact"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginRight="10dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="PlaceHolder: Contact"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/delBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
         android:text="delete"
-        android:layout_marginRight="10dp"
+        android:textAlignment="center"
+        android:background="@color/black"
         android:textColor="@color/white" />
+
 </LinearLayout>
