--- a/Code/SFU Circular/app/src/main/res/layout/fragment_listing.xml
+++ b/Code/SFU Circular/app/src/main/res/layout/fragment_listing.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ListingPage">
+    tools:context=".FragmentListing">
 
     <Button
-        android:id="@+id/goToPostListing"
+        android:id="@+id/goToPostListing2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="ADD LISTING" />
@@ -17,4 +16,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp" />
-</LinearLayout>
+</FrameLayout>
