--- a/Code/SFU Circular/app/src/main/res/layout/activity_listing_list_item.xml
+++ b/Code/SFU Circular/app/src/main/res/layout/activity_listing_list_item.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ListingListItem">
 
+    <ImageView
+        android:id="@+id/tv_image_listing"
+        android:layout_width="216dp"
+        android:layout_height="197dp"
+        android:layout_marginBottom="24dp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/tv_itemName_listingList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/btn_del_listing"
         android:layout_width="wrap_content"
@@ -21,7 +32,7 @@
         android:layout_width="157dp"
         android:layout_height="41dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="224dp"
         android:text="Name:"
         android:textAlignment="viewStart"
         app:layout_constraintStart_toStartOf="parent"
