--- a/Code/SFU Circular/app/src/main/res/layout/request_list_item.xml
+++ b/Code/SFU Circular/app/src/main/res/layout/request_list_item.xml
@@ -9,40 +9,40 @@
 
     <ImageView
         android:id="@+id/tv_image"
-        android:layout_width="match_parent"
-        android:layout_height="183dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:textAlignment="center" />
 
     <TextView
         android:id="@+id/tv_desc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="157dp"
+        android:layout_height="41dp"
         android:hint="PlaceHolder: Desc"
         android:textAlignment="center" />
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="157dp"
+        android:layout_height="41dp"
         android:hint="PlaceHolder: Name"
         android:textAlignment="center"
         android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tv_contact"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="157dp"
+        android:layout_height="41"
         android:hint="PlaceHolder: Contact"
         android:textAlignment="center" />
 
     <Button
         android:id="@+id/delBtn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:text="delete"
-        android:textAlignment="center"
         android:background="@color/black"
+        android:gravity="right"
+        android:text="DELETE REQUEST"
+        android:textAlignment="center"
         android:textColor="@color/white" />
 
 </LinearLayout>
